--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "mongo": "mongod --dbpath db",
+    "start": "ME_CONFIG_BASICAUTH_USERNAME=\"\" babel-node app.js --presets es2015"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,9 @@
     "express": "^4.13.4",
     "mongo-express": "^0.30.59",
     "mongodb": "^2.1.21"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
