--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "stubalubadubdub",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A versatile server stubbing solution built with ExpressJS and MongoDB.",
+  "repository" : {
+    "type" : "git", "url" : "https://github.com/elimydlarz/stubalubadubdub.git"
+  },
+  "main": "app.js",
   "scripts": {
     "mongo": "mongod --dbpath db",
     "start": "ME_CONFIG_BASICAUTH_USERNAME=\"\" babel-node app.js --presets es2015"
   },
-  "author": "",
+  "author": "Eli Mydlarz <eli.mydlarz@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
